Bug 340168 -- Save As dialog silently overwrites file (if no extension specified). Remove code that guesses and forces extensions. r=bienvenu, sr=Standard8, ui-r=clarkbw